--- a/internship2018-1/src/styles.css
+++ b/internship2018-1/src/styles.css
@@ -1,42 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
 
-.row > div:nth-child(1) {
+.index .row > div:nth-child(1) {
     background-color: yellow;
 }
 
-.row > div:nth-child(2) {
+.index .row > div:nth-child(2) {
     background-color: green;
 }
 
-.row > div:nth-child(3) {
+.index .row > div:nth-child(3) {
     background-color: blue;
 }
 
-.row > div:nth-child(4) {
+.index .row > div:nth-child(4) {
     background-color: red;
 }
 
-.row > div:nth-child(5) {
+.index .row > div:nth-child(5) {
     background-color: orange;
 }
 
-.row > div:nth-child(6) {
+.index .row > div:nth-child(6) {
     background-color: mediumturquoise;
 }
 
-.row > div:nth-child(7) {
+.index .row > div:nth-child(7) {
     background-color: limegreen;
 }
 
-.row > div:nth-child(8) {
+.index .row > div:nth-child(8) {
     background-color: lightpink;
 }
 
-.row > div:nth-child(9) {
+.index .row > div:nth-child(9) {
     background-color: lightcoral;
 }
 
-.row > div:nth-child(10) {
+.index .row > div:nth-child(10) {
     background-color: brown;
 }
 
@@ -46,4 +46,13 @@ h2 {
 
 h3 {
     margin: 30px 0 10px 0;
+}
+
+nav {
+    margin-bottom: 30px;
+}
+
+nav.navbar a.active {
+    color: white;
+    background-color: cornflowerblue
 }
