--- a/internship2018-1/Angular/lesson5/src/app/books-list/books-list.component.html
+++ b/internship2018-1/Angular/lesson5/src/app/books-list/books-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div *ngIf="books">
 		<div class="book-container" *ngFor="let item of books">
-			<book-details [book]="item"></book-details>
+			<book-details [book]="item" (favoriteClicked)="markAsFavorite($event)"></book-details>
 		</div>
 	</div>
 </div>
