Directives and Pipes

--- a/internship2018-1/src/styles.css
+++ b/internship2018-1/src/styles.css
@@ -119,3 +119,9 @@
   i.fa-smile {
     color: darkgreen;
   }
+
+  span.discount-price + span {
+    color: grey;
+    margin: 10px;
+    text-decoration: line-through;
+  }
