--- a/internship2018-1/src/app/app.component.html
+++ b/internship2018-1/src/app/app.component.html
@@ -23,221 +23,20 @@
 <div class="container">
   <h2>Products</h2>
   <div class="row">
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/1.jpeg" alt="1.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/2.jpeg" alt="2.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/3.jpeg" alt="3.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/4.jpeg" alt="4.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/5.jpeg" alt="5.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/6.jpeg" alt="6.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/7.jpeg" alt="7.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/8.jpeg" alt="8.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/9.jpeg" alt="9.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/10.jpeg" alt="10.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/11.jpeg" alt="11.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/12.jpeg" alt="12.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/13.jpeg" alt="13.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/14.jpeg" alt="14.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/15.jpeg" alt="15.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/16.jpeg" alt="16.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/17.jpeg" alt="17.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/18.jpeg" alt="18.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/19.jpeg" alt="19.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/20.jpeg" alt="20.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/21.jpeg" alt="21.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/22.jpeg" alt="22.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/23.jpeg" alt="23.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div>
-        <img src="./assets/products/24.jpeg" alt="24.jpeg" class="img-fluid">
-      </div>
-      <div class="py-3 px-5">
-        <div class="float-left">$5.20</div>
-        <button class="btn float-right btn-primary btn-sm">Order</button>
-      </div>
-    </div>
+    <ng-container *ngFor="let product of products">
+    	<div class="col-12 col-md-4" *ngIf="product.isVegan">
+    	  <h3>{{ product.name }}</h3>
+    	  <div>
+    	    <img [src]="product.src" [alt]="product.name" class="img-fluid">
+    	  </div>
+    	  <div class="py-3 px-5">
+    	    <div class="float-left">
+            <span appDiscountPrice [originalPrice]="product.price"></span>
+            <span>{{ product.price | currency:'' | price }}</span>
+          </div>
+    	    <button class="btn float-right btn-primary btn-sm">Order</button>
+    	  </div>
+    	</div>
+    </ng-container>
   </div>
 </div>
