--- a/internship2018-1/Angular/lesson7/src/app/app.component.html
+++ b/internship2018-1/Angular/lesson7/src/app/app.component.html
@@ -1,1 +1,6 @@
-<books-list></books-list>
+<nav class="navbar">
+    <a routerLink="/books" routerLinkActive="active">Home</a>
+</nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
