--- a/internship2018-1/Angular/lesson7/src/app/books-list/book-details/book-details.component.html
+++ b/internship2018-1/Angular/lesson7/src/app/books-list/book-details/book-details.component.html
@@ -1,15 +1,18 @@
-<div>
+<div class="book-container" *ngIf="book; else loading">
     <img [src]="book.imageUrl">
-    <div>
-        <p>
-            <b>Author: </b>
-            {{ book.author }}
-        </p>
-        <button *ngIf="!book.isFavorite; else stars" class="add-to-favorite" (click)="favoriteClicked.emit(book.id)">
-            Add to Favorites
-        </button>
-        <ng-template #stars>
-            <span *ngFor="let item of [1, 2, 3, 4, 5]">&#9734;</span>
-        </ng-template>
-    </div>
+    <p>
+        <b>Author: </b>
+        {{ book.author }}
+    </p>
+    <p>
+        <b>Price: </b>
+        {{ book.price | currency }}
+    </p>
+    <button *ngIf="!book.isFavorite; else stars" class="add-to-favorite" (click)="markAsFavorite()">
+        Add to Favorites
+    </button>
+    <ng-template #stars>
+        <span *ngFor="let item of [1, 2, 3, 4, 5]">&#9734;</span>
+    </ng-template>
 </div>
+<ng-template #loading>Loading...</ng-template>
