--- a/internship2018-1/src/app/app.component.html
+++ b/internship2018-1/src/app/app.component.html
@@ -22,21 +22,6 @@
 
 <div class="container">
   <h2>Products</h2>
-  <div class="row">
-    <ng-container *ngFor="let product of products">
-    	<div class="col-12 col-md-4" *ngIf="product.isVegan">
-    	  <h3>{{ product.name }}</h3>
-    	  <div>
-    	    <img [src]="product.src" [alt]="product.name" class="img-fluid">
-    	  </div>
-    	  <div class="py-3 px-5">
-    	    <div class="float-left">
-            <span appDiscountPrice [originalPrice]="product.price"></span>
-            <span>{{ product.price | currency:'' | price }}</span>
-          </div>
-    	    <button class="btn float-right btn-primary btn-sm">Order</button>
-    	  </div>
-    	</div>
-    </ng-container>
-  </div>
+  <button (click)="showProduct = !showProduct">Toggle products</button>
+  <app-product-list *ngIf="showProduct"></app-product-list>
 </div>
