--- a/internship2018-1/src/app/app.component.html
+++ b/internship2018-1/src/app/app.component.html
@@ -1,27 +1,35 @@
-<!-- Navigation start -->
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">
-      <img src="/assets/image.png" width="30" height="30" alt=""> Softheme
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="./index.html">Home</a>
-        <a class="nav-item nav-link" href="./lesson3.html">Lesson 3</a>
-        <a class="nav-item nav-link active" href="./products.html">Products</a>
-        <a class="nav-item nav-link" href="./css.html">Css</a>
-      </div>
-    </div>
-  </nav>
-</div>
-<!-- Navigation end -->
 
-<div class="container">
+
+<router-outlet></router-outlet>
+
+
+  
+  
+  <!-- Navigation start -->
+<!-- <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="./index.html">
+        <img src="/assets/image.png" width="30" height="30" alt=""> Softheme
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="./index.html">Home</a>
+          <a class="nav-item nav-link" href="./lesson3.html">Lesson 3</a>
+          <a class="nav-item nav-link active" href="./products.html">Products</a>
+          <a class="nav-item nav-link" href="./css.html">Css</a>
+        </div>
+      </div>
+    </nav>
+  </div> -->
+  <!-- Navigation end -->
+  
+  
+  <!-- <div class="container">
   <h2>Products</h2>
   <button mat-raised-button color="primary" (click)="showProduct = !showProduct">Toggle products</button>
-  <app-product-list *ngIf="showProduct"></app-product-list>
-</div>
+  <app-product-list *ngIf="showProduct"></app-product-list> -->
+<!--</div> -->
