--- a/internship2018-1/src/app/main/main.component.html
+++ b/internship2018-1/src/app/main/main.component.html
@@ -2,6 +2,14 @@
 
 <div class="container">
   <div class="row">
+    <div class="col-2"></div>
+    <div class="col-8 mt25">
+      <app-calendar></app-calendar>
+    </div>
+    <div class="col-2"></div>
+  </div>
+
+  <div class="row">
     <div class="col-2">
       <app-left-navigation></app-left-navigation>
     </div>
@@ -9,11 +17,12 @@
       <app-profile></app-profile>
     </div>
     <div class="col-5 mt25">
-        <app-banner></app-banner>
-        <div class="mt25">
-            <app-vacation-request></app-vacation-request>
-        </div>
+      <app-banner></app-banner>
+      <div class="mt25">
+        <app-vacation-request></app-vacation-request>
+      </div>
     </div>
     <div class="col-2"></div>
   </div>
+
 </div>
