--- a/internal-lectures/lection3/src/app/orders/orders.component.html
+++ b/internal-lectures/lection3/src/app/orders/orders.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let order of orders">
-    <app-order-details [order]="order" (remove)="removeOrder($event)"></app-order-details>
+<div class="mt-3 row">
+    <div *ngFor="let order of orders" class="col-4">
+        <app-order-details [order]="order" (remove)="removeOrder($event)"></app-order-details>
+    </div>
 </div>
