--- a/internal-lectures/lection3/src/app/orders/orders.component.html
+++ b/internal-lectures/lection3/src/app/orders/orders.component.html
@@ -1,5 +1,8 @@
 <div class="mt-3 row">
-    <div *ngFor="let order of orders" class="col-4">
-        <app-order-details [order]="order" (remove)="removeOrder($event)"></app-order-details>
+    <div  class="col-4">
+        {{ status }}
+        <div *ngFor="let order of orders; trackBy: trackById">
+            <app-order-details  [order]="order" (remove)="removeOrder($event)"></app-order-details>
+        </div>
     </div>
 </div>
