add custom directive

--- a/internal-lectures/lection3/src/app/order-details/order-details.component.html
+++ b/internal-lectures/lection3/src/app/order-details/order-details.component.html
@@ -12,6 +12,6 @@ Because angular always refresh the list.
 Impossible identify that list has same object in two different request
             </textarea>
         </div>
-        <button class="btn btn-info" (click)="onRemove()">Remove</button>
+        <button class="btn btn-info" appClickOnce (click)="onRemove()">Remove</button>
     </div>
 </div>
