BuiltIn directives. Date and Pipe

--- a/internal-lectures/lection3/src/app/order-details/order-details.component.html
+++ b/internal-lectures/lection3/src/app/order-details/order-details.component.html
@@ -3,8 +3,8 @@
         <h5 class="card-title">{{ order.name }}</h5>
         <div class="card-body">
             <dl class="row">
-                <dt class="col-4">Order date:</dt><dd>{{ order.date }}</dd>
-                <dt class="col-8">Order price:</dt><dd>{{ order.price }}</dd>
+                <dt class="col-4">Order date:</dt><dd>{{ order.date | date }}</dd>
+                <dt class="col-8">Order price:</dt><dd>{{ order.price | currency }}</dd>
             </dl>
             <textarea style="width: 100%;" rows="5">
 Unable save this text between requests.
