--- a/internal-lectures/lection5/src/app/orders/orders.component.html
+++ b/internal-lectures/lection5/src/app/orders/orders.component.html
@@ -1,3 +1,7 @@
+<div class="alert alert-success" role="alert">
+    You have {{ orderCount }} orders
+</div>
+
 <div class="mt-3 row" *ngIf="orders?.length; else noData">
     <div class="col-4">
         <div *ngFor="let order of orders; trackBy: trackById">
