--- a/internal-lectures/lecture6/src/app/orders/orders.component.html
+++ b/internal-lectures/lecture6/src/app/orders/orders.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-success" role="alert">
-    You have {{ orderCount }} orders
+    You have {{ orders?.length }} orders
 </div>
 
 <div class="mt-3 row" *ngIf="orders?.length; else noData">
