revert some features from previous lecture

--- a/internal-lectures/lecture7 - Routes/src/app/app.component.html
+++ b/internal-lectures/lecture7 - Routes/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Angular</a>
+    <app-cart-orders-count></app-cart-orders-count>
 </nav>
 <div class="container-fluid">
     <app-orders></app-orders>
