--- a/internal-lectures/lecture7 - Routes/src/app/order-details/order-details.component.html
+++ b/internal-lectures/lecture7 - Routes/src/app/order-details/order-details.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">{{ order.name }}</h5>
         <div class="card-body">
