--- a/internal-lectures/lecture7 - Routes/src/app/orders-badge/orders-badge.component.html
+++ b/internal-lectures/lecture7 - Routes/src/app/orders-badge/orders-badge.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="total">
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-success mt-3" role="alert">
         You have {{ total }} order(s)
         <ng-content></ng-content>
     </div>
