simple router to orders page

--- a/internal-lectures/lecture7 - Routes/src/app/app.component.html
+++ b/internal-lectures/lecture7 - Routes/src/app/app.component.html
@@ -3,6 +3,6 @@
     <app-cart-orders-count></app-cart-orders-count>
 </nav>
 <div class="container-fluid">
-    <app-orders></app-orders>
+    <router-outlet></router-outlet>
     <!-- <app-rxjs></app-rxjs> -->
 </div>
