--- a/internal-lectures/lecture7 - Routes/src/app/app.component.html
+++ b/internal-lectures/lecture7 - Routes/src/app/app.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Angular</a>
+    <a routerLink="products" routerLinkActive="active">Products</a>
+    <a routerLink="orders" routerLinkActive="active">Orders</a>
     <app-cart-orders-count></app-cart-orders-count>
 </nav>
 <div class="container-fluid">
