--- a/internal-lectures/lecture7 - Routes/src/app/order/order-details/order-details.component.html
+++ b/internal-lectures/lecture7 - Routes/src/app/order/order-details/order-details.component.html
@@ -7,6 +7,7 @@
                 <dt class="col-6">Order price:</dt><dd>{{ order.price | number:'1.2-2' | hryvnia }}</dd>
             </dl>
         </div>
-        <button class="btn btn-info" appClickOnce (click)="onRemove()">Remove</button>
+        <button class="btn btn-primary mr-3" routerLink="/order/{{ order.id }}">View Details</button>
+        <button class="btn btn-warning" appClickOnce (click)="onRemove()">Remove</button>
     </div>
 </div>
